src/objects/Product_Rate_Plan_Charge_Tier__c.object
<CustomObject>
    <fields>
        <fullName>End_Unit__c</fullName>
        <description>The start and end units are both inclusive for calculation.</description>
        <inlineHelpText>The start and end units are both inclusive for calculation.</inlineHelpText>
        <label>End Unit</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>External_ID__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Product_Rate_Plan_Charge__c</fullName>
        <label>Product Rate Plan Charge</label>
        <referenceTo>Product_Rate_Plan_Charge__c</referenceTo>
        <relationshipLabel>Product Rate Plan Charge Tiers</relationshipLabel>
        <relationshipName>Product_Rate_Plan_Charge_Tiers</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Start_Unit__c</fullName>
        <description>The start and end units are both inclusive for calculation.</description>
        <inlineHelpText>The start and end units are both inclusive for calculation.</inlineHelpText>
        <label>Start Unit</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Unit_Cost_Price__c</fullName>
        <label>Unit Cost Price</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Unit_Price__c</fullName>
        <label>Unit Price</label>
        <precision>18</precision>
        <required>true</required>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <label>Product Rate Plan Charge Tier</label>
    <nameField>
        <label>Product Rate Plan Charge Tier Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Product Rate Plan Charge Tiers</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>